--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -28,6 +28,7 @@
   <string name="AUDIBLE_ALERT">偵測到異常時，設備將播放聲音</string>
   <string name="Added_successfully">綁定成功</string>
   <string name="Alarm_WeChat">微信接收報警消息</string>
+  <string name="Alarm_WeChat_NoBindTips">使用此功能需要綁定郵箱</string>
   <string name="Apr">Apr.</string>
   <string name="Aug">Aug.</string>
   <string name="BACK">返回</string>
@@ -407,7 +408,7 @@
   <string name="RECORD_INFO_0">位移偵測到異常時啟用錄影，待移動停止時亦停止錄影</string>
   <string name="RECORD_INFO_1">24小時啟動錄影</string>
   <string name="RECORD_INFO_2">任何時候都不啟動錄影</string>
-  <string name="RECORD_MODE">移動偵測報警錄像</string>
+  <string name="RECORD_MODE">偵測報警錄像</string>
   <string name="RECORD_MODE_1">全天</string>
   <string name="RECORD_MODE_2">永不</string>
   <string name="RECORD_MODE_CHANGE">當前位置為回家模式，位移偵測已關閉，如需開啟，請修改模式</string>
@@ -511,8 +512,8 @@
   <string name="SETTING">正在設定&#8230;</string>
   <string name="SETTINGS">設定</string>
   <string name="SETTINGS_1">功能設置</string>
-  <string name="SETTINGS_Wechat_Switch_Cancel">關閉將無法接收微信推送。想取消綁定請前往微信取消關注“加菲狗官微服務”公眾號。</string>
-  <string name="SETTINGS_Wechat_Switch_Open">請在新的微信號上關注“加菲狗官微服務”並綁定，成功後舊的微信號將不再接收消息推送</string>
+  <string name="SETTINGS_Wechat_Switch_Cancel">關閉將無法接收微信推送。想取消綁定請前往微信取消關注“加菲狗官微服务”公眾號。</string>
+  <string name="SETTINGS_Wechat_Switch_Open">請在新的微信號上關注“加菲狗官微服务”並綁定，成功後舊的微信號將不再接收消息推送</string>
   <string name="SETTING_DIRECTION">錄影指向</string>
   <string name="SETTING_FREE">自行設定單個設備的位移偵測及警示</string>
   <string name="SETTING_RECORD">錄像設置</string>
@@ -568,11 +569,11 @@
   <string name="Start_instructions">開啟說明</string>
   <string name="Start_instructions_A">在微信公眾號裡綁定加菲狗電子郵件，即可開啟此功能。</string>
   <string name="Start_instructions_B">步驟如下：</string>
-  <string name="Start_instructions_C">1. 請先關注微信公眾號“加菲狗官微服務”</string>
-  <string name="Start_instructions_D">方法一：點擊微信右上角的“+”號 > 添加朋友 > 公眾號，搜索“加菲狗官微服務”然後關注。</string>
+  <string name="Start_instructions_C">1. 請先關注微信公眾號“加菲狗官微服务”</string>
+  <string name="Start_instructions_D">方法一：點擊微信右上角的“+”號 > 添加朋友 > 公眾號，搜索“加菲狗官微服务”然後關注。</string>
   <string name="Start_instructions_E">方法二：截圖此頁面，在微信 裡掃一掃關注。</string>
   <string name="Start_instructions_F">2. 綁定賬號</string>
-  <string name="Start_instructions_G">關注“加菲狗官微服務”公眾號後，進入主頁面，點擊菜單欄的“服務”，選擇“綁定賬號”。</string>
+  <string name="Start_instructions_G">關注“加菲狗官微服务”公眾號後，進入主頁面，點擊菜單欄的“服務”，選擇“綁定賬號”。</string>
   <string name="Start_instructions_H">綁定賬號</string>
   <string name="Start_instructions_I">請輸入加菲狗電子郵件賬號進行綁定，如忘記密碼請到加菲狗客戶端找回</string>
   <string name="Switch_Mode">拍攝內容請切換至直連模式查看</string>
@@ -796,6 +797,7 @@
   <string name="Tap2_Timelapse_screenshot">螢幕快照</string>
   <string name="Tap2_Timelapse_title">延時攝影</string>
   <string name="Tap2_TitleName">每日精彩</string>
+  <string name="Tap2_TitleName_Sentence">每日精彩</string>
   <string name="Tap2_share_sharevideo">分享了一段影片給你</string>
   <string name="Tap2_share_sharevideo_tips">我用砍價王智能攝像機拍攝了一段延時攝影，快來看看吧</string>
   <string name="Tap2_share_unabletoshare">手機沒有安裝Wechat，無法分享</string>
@@ -871,6 +873,7 @@
   <string name="Tap3_ShareDevice_NoDevice">還沒有保存</string>
   <string name="Tap3_ShareDevice_NoShare">暫未分享</string>
   <string name="Tap3_ShareDevice_NoneFriends">暫無添加親友</string>
+  <string name="Tap3_ShareDevice_NoneShareFriends">暫無可分享親友</string>
   <string name="Tap3_ShareDevice_NotYourself">無法分享設備給自己</string>
   <string name="Tap3_ShareDevice_Shared">已分享</string>
   <string name="Tap3_ShareDevice_SharedContents">已分享內容</string>
